k8sYAMLs/eln-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: eln-ui
    app.kubernetes.io/part-of: eln-app
    app.kubernetes.io/version: 0.0.1
    sz-service-ui-version: v1
    sz-service-type: ui
  name: eln-ui
  namespace: eln
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: eln-ui
      app.kubernetes.io/part-of: eln-app
      app.kubernetes.io/version: 0.0.1
      sz-service-ui-version: v1
      sz-service-type: ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: eln-ui
        app.kubernetes.io/part-of: eln-app
        app.kubernetes.io/version: 0.0.1
        sz-service-ui-version: v1
        sz-service-type: ui
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: eln-ui
        image: 435906191695.dkr.ecr.ap-south-1.amazonaws.com/eln-ui:latest
        imagePullPolicy: Always
        name: eln-ui
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - name: eln-ui-config
            mountPath: /tmp/.uienv
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: aws-ecr-registry-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: eln-ui-config
          configMap:
            name: eln-ui
