k8sYAMLs/eln-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: eln-ui
    app.kubernetes.io/part-of: eln-app
    app.kubernetes.io/version: 0.0.1
    sz-service-type: ui
  name: eln-ui
  namespace: eln
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: eln-ui
    app.kubernetes.io/part-of: eln-app
    app.kubernetes.io/version: 0.0.1
    sz-service-type: ui
  type: ClusterIP
